# housing-data-manager-api

./: Commands-housing-project  README.md  database.py  docker-compose.yml  dockerfile  pyproject.toml
Housing-Project_Rawad-Hammoude/: .env  Readme.md  docker-compose.yml
Housing-Project_Rawad-Hammoude/housing-api/: .env  Readme.md  alembic.ini  pyproject.toml  wait-for-it.sh
Housing-Project_Rawad-Hammoude/housing-consumer/: Dockerfile  Readme.md  consumer.py  producer.py  pyproject.toml
Housing-Project_Rawad-Hammoude/housing-model/: Dockerfile  Readme.md  explore.py  pyproject.toml  train.py
Housing-Project_Rawad-Hammoude/housing-model/app/: main.py
Housing-Project_Rawad-Hammoude/housing-model/mlruns/0/: meta.yaml
Housing-Project_Rawad-Hammoude/housing-model/mlruns/148807916179391856/: meta.yaml
Housing-Project_Rawad-Hammoude/housing-model/mlruns/148807916179391856/c00412c1ed244d26843e39509176a057/: meta.yaml
Housing-Project_Rawad-Hammoude/housing-model/mlruns/148807916179391856/c00412c1ed244d26843e39509176a057/artifacts/model/: MLmodel  conda.yaml  input_example.json
Housing-Project_Rawad-Hammoude/housing-model/mlruns/148807916179391856/c00412c1ed244d26843e39509176a057/metrics/: score
Housing-Project_Rawad-Hammoude/housing-model/mlruns/148807916179391856/c00412c1ed244d26843e39509176a057/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
Housing-Project_Rawad-Hammoude/housing-model/model/: MLmodel  model.pkl  serving_input_example.json
housing_project/housing_data_manager_api/: Dockerfile  crud.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  schemas.py
housing_project/housing_model_inference/: Dockerfile  analysis.py  docker-compose.yml  predict_api.py  train_model.py
(+6 files in other folders)
